=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_01-dev

if PERL_DESTRUCT_LEVEL < 0, skip perl_destruct(), etc. in perl_shutdown()

add CLOSE method for tied *STD{OUT,IN}

add config for mod_ssl and 'make test' [Lupe Christoph <lupe@alanya.m.isar.de>]

PerlInitHandler is now aliased to PerlPostReadRequestHandler when
configured a the "top-level", that is, not within any Location,
Directory or Files, where it is still aliased to
PerlHeaderParserHandler
 
PerlCleanupHandler is now run by a register_cleanup(), rather than an
alias for PerlLogHandler 

get rid of warning in Apache::RedirectLogFix [Brian Moseley <ix@maz.org>]

added $r->internal_redirect method

Apache::TieHashTable class enhancements:

 -get() in list context will return all values found for the given key
 -merge() and add() will accept an array reference of values
 -new method do()

add -DMOD_PERL to apaci/configure for USE_APXS=1
[Andrea Borgia <bab0069@iperbole.bologna.it>]

set LD_RUN_PATH in Makefile.PL [Tom Hughes <tom@compton.demon.co.uk>]

add =pod config support for '={begin,for} apache ... =end apache'

move mod_perl_cleanup_av outside of #ifdef PERL_DIRECTIVE_HANDLERS to
cure compile problem spotted by David-Michael Lincke

Fixed problem with 'POST' requests when using Apache::Include
[Doug Bagley <doug@dejanews.com>]

make $r->connection->remote_ip set-able [Doug Bagley <doug@dejanews.com>]

new experimental options PERL_SAFE_STARTUP and PERL_DEFAULT_OPMASK
when httpd is starting, opcodes will be disabled during PerlModule,
PerlRequire and <Perl></Perl>
 
 -PERL_SAFE_STARTUP=1 enables PerlOpmask directive
   if PerlOpmask is "default", use mask generated from src/opcodes.txt
   else it's a file to create the mask in the format of src/opcodes.txt
   if no PerlOpmask, no opcodes are disabled
 - 'make update_op_mask OPCODE_FILE=my_opcodes.txt && make'
   changes the default opmask generated from OPCODE_FILE